# xxr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  XCS.sln
XCS/: XCS.vcxproj  XCS.vcxproj.filters  action_set.h  classifier.h  classifier_ptr_set.h  classifier_repository.h  condition.h  constants.h  environment.h  experiment.h  ga.h  main.cpp  match_set.h  population.h  prediction_array.h  random.h  situation.h  state.h  symbol.h  xcs.h  xcs_constants.h
XCSR/: XCSR.vcxproj  XCSR.vcxproj.filters  action_set.h  classifier.h  condition.h  constants.h  cs_symbol.h  environment.h  experiment.h  ga.h  main.cpp  match_set.h  symbol.h  xcsr.h  xcsr_constants.h
XCSR_CS/: classifier.h  ga.h  symbol.h
XCSR_LU/: classifier.h  experiment.h  match_set.h
examples/: maze4.txt  maze5.txt
include/xxr/: experiment.hpp  random.hpp  xcs.hpp  xcsr.hpp
include/xxr/environment/: block_world_environment.hpp  checkerboard_environment.hpp  csv_environment.hpp  dataset_environment.hpp  environment.hpp  multiplexer_environment.hpp  real_multiplexer_environment.hpp
include/xxr/helper/: csv.hpp  dataset.hpp  experiment_helper.hpp  experiment_log_stream.hpp  experiment_settings.hpp  simple_moving_average.hpp
include/xxr/xcs/: action_set.hpp  classifier.hpp  classifier_ptr_set.hpp  condition.hpp  constants.hpp  experiment.hpp  ga.hpp  match_set.hpp  population.hpp  prediction_array.hpp  symbol.hpp
include/xxr/xcsr/: action_set.hpp  classifier.hpp  condition.hpp  constants.hpp  experiment.hpp  repr.hpp  symbol.hpp
include/xxr/xcsr/csr/: classifier.hpp  experiment.hpp  ga.hpp  match_set.hpp  symbol.hpp
include/xxr/xcsr/obr/: classifier.hpp  experiment.hpp  ga.hpp  match_set.hpp  symbol.hpp
include/xxr/xcsr/ubr/: classifier.hpp  experiment.hpp  ga.hpp  match_set.hpp  symbol.hpp
maze_map/: maze6.txt  woods1.txt  woods2.txt
src/: common.h  common.hpp  xcs.cpp  xcsr.cpp
src/XCS/: action_set.h  classifier.h  classifier_ptr_set.h  condition.h  constants.h  experiment.h  ga.h  match_set.h  population.h  prediction_array.h  random.h  symbol.h
src/XCSR/: action_set.h  classifier.h  condition.h  constants.h  main.cpp
src/XCSR_CS/: classifier.h  experiment.h  ga.h  match_set.h  symbol.h
src/XCSR_LU/: classifier.h  experiment.h  ga.h  match_set.h  symbol.h
src/XCSR_UB/: classifier.h  experiment.h  ga.h  match_set.h  symbol.h
src/environment/: block_world_environment.h  checkerboard_environment.h  csv_environment.h  environment.h  multiplexer_environment.h  real_multiplexer_environment.h
src/unit_test/: checkerboard_environment_test.cpp  symbol_condition_test.cpp  unit_test.h  unit_test.hpp
src/util/: simple_moving_average.h
